--- a/Course Project.Rmd
+++ b/Course Project.Rmd
@@ -2,7 +2,9 @@
 title: "Course Project"
 author: "Daniel"
 date: "11 6 2020"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
